--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="#pedido"> Grande dia </a>
         <a href="#postura"> Mudanças </a>
         <a href="#4"> Adivinha ?  </a>
+        <a href="#segredo"> Segredo  </a>
     </nav>
     <main>
         <h2 id="D"> Os D </h2>
@@ -48,6 +49,8 @@
             <h3>Clique aqui </h3>
             <p> Muito gostosa, linda, melhor namo do mundo, te amo muito</p>
         </div>
+        <h2 id="Segredo">Declaração</h2>
+        <p>Eu te amo muito, de verdade mesmo, bizaro que é só 4 meses porque parece que a gente já se conhece a muito tempo, agradeço todo dia por ter um amor como você, você é meu orgulho meu motivo para eu ser o Ismael que eu sou hoje, obrigado demais por tudo, a gente é para sempre. Fiz essa besteirinha só para você saber o quanto eu te amo. E que você está em absolutamente tudo da minha vida gatinha. Prometo fazer um melhorzinho desse, é que não deu tempo pq jaja tenho que mimir. To com sdd </p>
     </main>
     <footer>
 
